tests/netconvert/import/XML/errors/xml_looped_edge/errors.netconvert
Warning: Ignoring self-looped edge '2' at junction 'dr'
Error: No edges loaded.
Quitting (on error).
